aya-parser/src/snapshots/aya_parser__mov__tests__complex_mov_lit_mem.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovLitMem(
    BinaryOp {
        lhs: BinaryOp {
            lhs: HexLiteral(
                "42",
            ),
            operator: Add,
            rhs: Var(
                "loc",
            ),
        },
        operator: Sub,
        rhs: BinaryOp {
            lhs: BinaryOp {
                lhs: HexLiteral(
                    "05",
                ),
                operator: Mul,
                rhs: BinaryOp {
                    lhs: HexLiteral(
                        "31",
                    ),
                    operator: Add,
                    rhs: Var(
                        "var",
                    ),
                },
            },
            operator: Sub,
            rhs: HexLiteral(
                "07",
            ),
        },
    },
    HexLiteral(
        "ffee",
    ),
)
