aya-parser/src/snapshots/aya_parser__mov__tests__mov_lit_reg.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovLitReg(
    Register(
        "r1",
    ),
    HexLiteral(
        "c0d3",
    ),
)
