aya-parser/src/snapshots/aya_parser__mov__tests__mov_mem_reg.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovMemReg(
    Register(
        "r4",
    ),
    Address(
        "c0d3",
    ),
)
