aya-parser/src/snapshots/aya_parser__mov__tests__mov_reg_ptr_reg.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovRegPtrReg(
    Register(
        "r3",
    ),
    Register(
        "r4",
    ),
)
