aya-parser/src/snapshots/aya_parser__mov__tests__mov_reg_reg.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovRegReg(
    Register(
        "r1",
    ),
    Register(
        "r2",
    ),
)
