aya-parser/src/snapshots/aya_parser__mov__tests__run_instruction-6.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovRegMem(
    Address(
        "c0d3",
    ),
    Register(
        "r2",
    ),
)
