aya-parser/src/snapshots/aya_parser__mov__tests__run_instruction.snap
---
source: aya-parser/src/mov.rs
expression: instruction
---
MovLitMem(
    Address(
        "c0d3",
    ),
    HexLiteral(
        "ffe3",
    ),
)
